--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,8 @@ button {
 }
 
 button:hover {
-  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 8px;
-  transition-duration: 0.1s;
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 16px;
+  transition-duration: 0.2s;
 }
 
 h1 {
